--- a/.screenrc
+++ b/.screenrc
@@ -1,3 +1,12 @@
 caption always "%{= kw}%-w%{= kG}%{+b}[%n %t]%{-b}%{= kw}%+w %=%d %M %0c %{g}%H%{-}"
-defscrollback 3000
+
+# define a bigger scrollback, defalut is 100 lines
+defscrollback 1000
+
+# enable mouse scroll bar
 termcapinfo xterm* ti@:te@
+
+# clear screen after closing vim
+altscreen on
+
+term screen-256color
